--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vitest": "^1.5.3"
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-beta.0",
