--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier -w .",
     "format:check": "prettier -c .",
     "typecheck": "tsc --noEmit --incremental false",
-    "test": "echo 'test'",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -51,12 +52,16 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": ">=2.0.0-beta.0",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^15.0.5",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.5.3",
     "add": "^2.0.6",
     "autoprefixer": "^10.4.19",
+    "jsdom": "^24.0.0",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
