--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["vitest/globals"],
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
@@ -21,6 +22,6 @@
       "~/*": ["./public/*"]
     }
   },
-  "include": ["src"],
+  "include": ["src", "tests", "src/environment.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
