--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zana",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -32,8 +32,11 @@
     "@radix-ui/react-menubar": "^1.0.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@tauri-apps/api": ">=2.0.0-beta.0",
-    "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-notification": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.2",
     "@tauri-apps/plugin-store": "^2.0.0-beta.2",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "husky": "^9.0.11",
