--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,4 +16,8 @@ tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-store = "2.0.0-beta.5"
+tauri-plugin-notification = "2.0.0-beta.4"
+
+[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
+tauri-plugin-global-shortcut = "2.0.0-beta.3"
 
